@startuml
enum ShipType {
SUBMARINE
BATTLESHIP
SUPPORTSHIP
}


class Ship {
    - ShipType ship_type_
    - Coordinates bow_
    - Coordinates stern_
    - std::vector<int> hits_offset_;
}

Ship <-- ShipType
Ship <-- Coordinates

class GameBoard {
    - std::map<Coordinates, *Ship> ships_;
}
class FiringBoard {
    - std::set<Coordinates> hit_locations_;
}
GameBoard <|-- FiringBoard

class Coordinates {
    - std::pair<int, int> row_col_;
    - Coordinates(std::string user_coordinate)
    - Coordinates(int row, int col)
    + int GetRow()
    + int GetCol()
}
@enduml